fix: align brand CSS with glean-docs to fix font weight regression (#476)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -11,15 +11,7 @@
 
 /* Import fonts */
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&display=swap');
-
-@font-face {
-  font-family: 'Polysans Neutral';
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-  src: url('https://cdn.prod.website-files.com/6127a84dfe068e153ef20572/66b4a66d22e2c49832621144_PolySans-Neutral.woff2')
-    format('woff2');
-}
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100..1000&display=swap');
 
 :root {
   /* MCP Tooltip Variables - Light mode: white on blue */
